[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = molecule-alicloud
url = https://github.com/ansible-community/molecule-alicloud
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-alicloud/issues
    Release Management = https://github.com/ansible-community/molecule-alicloud/releases
    CI: Zuul = https://dashboard.zuul.ansible.com/t/ansible/builds?project=ansible-community/molecule-alicloud
    Source Code = https://github.com/ansible-community/molecule-alicloud
description = AliCloud ECS Molecule Plugin :: run molecule tests using AliCloud ECS (Aliyun ECS)
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Yang Liu
author_email = liuyangc3@gmail.com
maintainer = Yang Liu
maintainer_email = liuyangc3@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    ecs
    alicloud
    aliyun
    alibaba

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    ansible >= 2.9.5
    molecule >= 3.0.2
    pyyaml >= 5.1, < 6
    ansible_alicloud
    ansible_alicloud_module_utils

[options.extras_require]
test =
    ansi2html  # soft-dependency of pytest-html
    flake8>=3.6.0, < 4

    mock>=3.0.5, < 4
    pytest>=4.6.3, < 5
    pytest-cov>=2.7.1, < 3
    pytest-helpers-namespace>=2019.1.8, < 2020
    pytest-html
    pytest-mock>=1.10.4, < 2
    pytest-plus
    pytest-verbose-parametrize>=1.7.0, < 2
    pytest-xdist>=1.29.0, < 2
    pytest-dependency
    shade>=1.31.0, < 2

[options.entry_points]
molecule.driver =
    alicloud = molecule_alicloud.driver:AliCloudECS

[options.packages.find]
where = .
